common:solve the issue that the osd can't restart after seting a virtual local loopback IP

This will solve the issue that the osd can't restart after seting a virtual local loopback IP
Fixed:https://tracker.ceph.com/issues/43417
Signed-off-by: JiaWei LI lijiawei1@chinatelecom.cn
Reviewed-by: chenyupeng@chinatelecom.cn
Reviewed-by: chenxiaowei@chinatelecom.cn